--- a/app/src/main/res/layout/fragment_bayan_catalog.xml
+++ b/app/src/main/res/layout/fragment_bayan_catalog.xml
@@ -12,13 +12,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".ui.catalog.fragments.BayanCatalogFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/bayan_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
+            android:layout_marginBottom="60dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
