--- a/app/src/main/res/layout/item_bayan.xml
+++ b/app/src/main/res/layout/item_bayan.xml
@@ -10,8 +10,10 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bayan_item"
         android:layout_width="match_parent"
-        android:layout_height="170dp"
+        android:layout_height="190dp"
+        android:layout_margin="8dp"
         android:background="@color/white"
         android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
@@ -19,8 +21,8 @@
 
         <ImageView
             android:id="@+id/bayan_icon"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_margin="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -28,9 +30,9 @@
             android:contentDescription="@string/bayan_icon" />
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/bayan_name"
             android:layout_width="200dp"
-            android:layout_height="60dp"
+            android:layout_height="70dp"
             android:layout_marginStart="16dp"
             android:textColor="@color/black"
             android:textSize="20sp"
@@ -40,35 +42,35 @@
             app:layout_constraintVertical_bias="0.145" />
 
         <TextView
-            android:id="@+id/price"
+            android:id="@+id/bayan_price"
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/bayan_icon"
-            app:layout_constraintTop_toBottomOf="@+id/name"
-            app:layout_constraintBottom_toTopOf="@+id/add_to_cart" />
+            app:layout_constraintTop_toBottomOf="@+id/bayan_name"
+            app:layout_constraintBottom_toTopOf="@+id/add_bayan_to_cart" />
 
         <Button
-            android:id="@+id/add_to_cart"
+            android:id="@+id/add_bayan_to_cart"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="40dp"
             android:text="@string/add_to_cart"
             app:layout_constraintStart_toEndOf="@+id/bayan_icon"
-            app:layout_constraintTop_toBottomOf="@+id/name"
+            app:layout_constraintTop_toBottomOf="@+id/bayan_name"
             android:onClick="@{()->viewModel.addToCart()}" />
 
         <ImageButton
-            android:id="@+id/add_to_favourites"
+            android:id="@+id/add_bayan_to_favourites"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="40dp"
-            app:layout_constraintStart_toEndOf="@+id/add_to_cart"
-            app:layout_constraintTop_toBottomOf="@+id/name"
+            app:layout_constraintStart_toEndOf="@+id/add_bayan_to_cart"
+            app:layout_constraintTop_toBottomOf="@+id/bayan_name"
             app:srcCompat="@drawable/baseline_favorite_border_24"
             android:contentDescription="@string/add_to_favourites"
             android:onClick="@{()->viewModel.addToFavourites()}"/>
