--- a/app/src/main/res/layout/item_accordion.xml
+++ b/app/src/main/res/layout/item_accordion.xml
@@ -10,6 +10,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/accordion_item"
         android:layout_width="match_parent"
         android:layout_height="190dp"
         android:layout_margin="8dp"
@@ -46,7 +47,7 @@
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/accordion_icon"
             app:layout_constraintTop_toBottomOf="@+id/accordion_name"
             app:layout_constraintBottom_toTopOf="@+id/add_accordion_to_cart" />
